# sati-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sati_tools/: cli.py  io.py  registration.py  utils.py
src/sati_tools/multiply/: cli.py
src/sati_tools/preprocess/: cli.py
